intermediate commit; not sure if gpu is broken or if i just need to reboot with the new drivers i installed